# j-archive-crawler

./: Cargo.toml  LICENSE  README.md  exec.sh  results.json  test.json
example/: results.json
results/: results.json
src/: crawler.rs  errors.rs  main.rs  models.rs  parser.rs  reporter.rs  scraper.rs
src/crawler/: mod.rs
src/models/: cli_args.rs  episode.rs  error.rs  mod.rs  question.rs  round.rs
src/parser/: mod.rs
src/reporter/: mod.rs
src/sanitizer/: mod.rs
src/serializer/: mod.rs
src/utils/: mod.rs
