[package]
name = "j-archive-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
regex = "1.7.0"
reqwest = "0.11.13"
scraper = "0.13.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
